# ymp

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  media.rs  player.rs  queue.rs  search.rs  settings.rs  types.rs  ui.rs
src/media/: playback.rs  search.rs
src/ui/: popup.rs  tabs_state.rs
