[package]
name = "ymp-rust"
version = "0.1.0"
description = "YouTube Media Player and Explorer"
authors = ["trap"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
interprocess = "2.2.3"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
